small edit to variables

--- a/01_Test1.Rmd
+++ b/01_Test1.Rmd
@@ -77,11 +77,11 @@ my_tree <- rpart(formula = Diagnosticgroups ~
                    # EkmHappy +
                    # EkmSad +
                    # EkmSurpris +
-                   EkmTotal +
+                   EkmTotal,# +
                    # FauxpasGoed +
                    # nonFauxGoed +
                    # EmpathieGoed +
-                   FauxpasTotaal,
+                   #FauxpasTotaal,
                  data = train, method = "class")
 
 # Time to plot your fancy tree
